syntax = "proto3";

package task;

option go_package = "./taskpb";

import "google/api/annotations.proto";

message Task {
  int32 id = 1;
  string name = 2;
}

message GetTasksRequest {

}

message GetTasksResponse {
  string message = 1;
  repeated Task data = 2;
}

message CreateTaskRequest {
  string name = 1;
}

message CreateTaskResponse {
  string message = 1;
  Task data = 2;
}

message UpdateTaskRequest {
  int64 id = 1;
  string name=  2;
}

message UpdateTaskResponse {
  string message = 1;
  Task data = 2;
}

message DeleteTaskRequest {
  int64 id = 1;
}

message DeleteTaskResponse {
  string message = 1;
  int64 data = 2;
}

service TaskService {
  rpc GetTasks(GetTasksRequest) returns (GetTasksResponse){
    option(google.api.http) = {
      get: "/api/v1/tasks",
    };
  }
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse){
    option(google.api.http) = {
      post: "/api/v1/tasks",
    };
  }
  rpc UpdateTask(UpdateTaskRequest) returns (UpdateTaskResponse) {
    option(google.api.http) = {
      put: "/api/v1/tasks/{id}",
    };
  }
  rpc DeleteTask(DeleteTaskRequest) returns(DeleteTaskResponse) {
    option(google.api.http) = {
      delete: "/api/v1/tasks/{id}"
    };
  }
}

